@@ -171,7 +171,8 @@ gaim_LDADD = \
 	$(XSS_LIBS) \
 	$(SM_LIBS) \
 	$(INTLLIBS) \
-	$(GTKSPELL_LIBS)
+	$(GTKSPELL_LIBS) \
+	$(STARTUP_NOTIFICATION_LIBS)
 
 gaim_remote_SOURCES = \
 	gaim-remote.c
@@ -190,4 +191,5 @@ AM_CPPFLAGS = \
 	$(AO_CFLAGS) \
 	$(DEBUG_CFLAGS) \
 	$(GTK_CFLAGS) \
-	$(GTKSPELL_CFLAGS)
+	$(GTKSPELL_CFLAGS) \
+	$(STARTUP_NOTIFICATION_CFLAGS)
